fix(ui): add cache buster to css links

--- a/src/app/web/templates/base.html
+++ b/src/app/web/templates/base.html
@@ -45,8 +45,8 @@
             }
         }
     </script>
-    <link rel="stylesheet" href="/static/app.css">
-    <link rel="stylesheet" href="/static/pages.css">
+    <link rel="stylesheet" href="/static/app.css?v=2">
+    <link rel="stylesheet" href="/static/pages.css?v=2">
     {% block extra_head %}{% endblock %}
 </head>
 
