--- a/src/app/web/templates/login.html
+++ b/src/app/web/templates/login.html
@@ -40,8 +40,8 @@
             }
         }
     </script>
-    <link rel="stylesheet" href="/static/app.css">
-    <link rel="stylesheet" href="/static/pages.css">
+    <link rel="stylesheet" href="/static/app.css?v=2">
+    <link rel="stylesheet" href="/static/pages.css?v=2">
 </head>
 
 <body class="bg-slate-50 login-bg-pattern min-h-screen flex items-center justify-center p-4">
