--- a/src/app/web/templates/pages/history.html
+++ b/src/app/web/templates/pages/history.html
@@ -64,7 +64,7 @@
         </div>
 
         {% if analyses %}
-        <div class="overflow-x-auto">
+        <div class="overflow-x-auto w-full">
             <table class="min-w-full divide-y divide-slate-200">
                 <thead class="bg-slate-50">
                     <tr>
