--- a/src/app/web/templates/base.html
+++ b/src/app/web/templates/base.html
@@ -147,7 +147,7 @@
         </div>
     </footer>
 
-    <script src="/static/app.js"></script>
+    <script src="/static/app.js?v=3"></script>
     {% block extra_scripts %}{% endblock %}
 </body>
 
